--- a/weather/css/index.css
+++ b/weather/css/index.css
@@ -1,20 +1,29 @@
-body{
+/*body{
 	background-image: url(../img/上海.jpg);
 	background-repeat: no-repeat;
 	background-size: 10rem 100%;
 	width:10rem;
 	height:100%;
-}
+}*/
 .clearfix:after{
 	content:"";
 	display: block;
 	clear:both;
 }
+.bgp{
+	width:10rem;
+	height:100%;
+	z-index:-4;
+	float:left;
+	position: fixed;
+	top:0;
+	left:0;
+}
 .mask{
 	width:10rem;
 	height:100%;
 	background-color: rgba(0,0,0,0.2);
-	 z-index:-3;
+	z-index:-3;
 	float:left; 
 	position: fixed;
 	top:0;
