--- a/calendar/css/index.css
+++ b/calendar/css/index.css
@@ -1,89 +1,88 @@
-/*filter*/
-.wrap{
-	width:10rem;
-	height: 16.08rem;
-	background-color: #191f28;
-}
-nav{
-	height:2.373333rem;
-	line-height: 2.373333rem;
-	display: flex;
-	align-items: center;
-}
-nav a{
-	color:#666a71;
-	font-size: 21px;
-	flex-grow:1;
-	text-align: center;
-}
-nav a.active{
-	color:#fff;
-}
-.wrap>div{
-	margin:0 0.533333rem;
-}
-.week{
-	height:1.333333rem;
-	display: flex;
-	align-items: center;
-}
-.week li{
-	flex-grow:1;
-	text-align: center;
-	color:#f5f5f5;
-	font-size: 16px;
-}
-.date{
-	height:7rem;
-	display: flex;
-	flex-wrap: wrap;
-}
-.date li{
-	flex-grow:1;
-	text-align: center;
-	color:#fff;
-	font-size: 14px;
-	width:1.2rem;
-	height: 1.2rem;
-	border-radius: 50%;
-}
-.date li p{
-	margin: 0.2rem 0 0 0.2rem;
-	width:0.8rem;
-	height: 0.8rem;
-	border-radius: 50%;
-	line-height: 0.8rem;
-	text-align: center;
-}
-.date li p.active{
-	background-color: #06bebd;
-	color:#fff;
-}
-.date li p.past{
-	color:#b3bdc2;
-}
-.wrap>p{
-	width:4.88rem;
-	margin:0 auto;
-	text-align: center;
-}
-.wrap .choose-date{
-	margin: 0 auto 0.44rem;
-	color:#f5f5f5;
-	font-size: 16px;
-	line-height: 1.4em;
-}
-.wrap .total-days{
-	margin: 0.4rem auto 1.466667rem;
-	color:#b3bdc2;
-	font-size: 14px;
-}
-.wrap .apply{
-	height:1.733333rem;
-	line-height: 1.733333rem;
-	text-align: center;
-	font-size: 18px;
-	color:#fff;
-	background-color: #06bebd;
-	border-radius: 0.826667rem;
-}
+/*@mixin font-dpr($font-size){
+  font-size: $font-size;
+
+  [data-dpr="2"] & {
+    font-size: $font-size * 2;
+  }
+
+  [data-dpr="3"] & {
+    font-size: $font-size * 3;
+  }*/
+@import url(../css/reset.css);
+body {
+  font-size: 13px; }
+  [data-dpr="1"] body {
+    font-size: 13px; }
+  [data-dpr="2"] body {
+    font-size: 26px; }
+  [data-dpr="3"] body {
+    font-size: 39px; }
+
+header {
+  width: 10rem;
+  height: 1.33333rem;
+  border: 1px solid #eeeeee;
+  color: #e31b24;
+  position: relative;
+  /*.today{
+    width:size(62);
+    height:size(32);
+    float:left;
+  }
+  .icon-add{
+    float:right;
+    margin-right:size(32);
+  }*/ }
+  header .prev-month, header .next-month {
+    width: 1.33333rem;
+    height: 1.33333rem;
+    line-height: 1.33333rem; }
+    [data-dpr="1"] header .prev-month, [data-dpr="1"] header .next-month {
+      font-size: 14px; }
+    [data-dpr="2"] header .prev-month, [data-dpr="2"] header .next-month {
+      font-size: 28px; }
+    [data-dpr="3"] header .prev-month, [data-dpr="3"] header .next-month {
+      font-size: 42px; }
+  header .prev-month {
+    margin-left: 0.26667rem;
+    float: left; }
+  header .next-month {
+    margin-right: 0.26667rem;
+    float: right; }
+  header .choosed-time {
+    width: 5rem;
+    height: 1.33333rem;
+    line-height: 1.33333rem;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -2.5rem;
+    text-align: center; }
+    [data-dpr="1"] header .choosed-time {
+      font-size: 16px; }
+    [data-dpr="2"] header .choosed-time {
+      font-size: 32px; }
+    [data-dpr="3"] header .choosed-time {
+      font-size: 48px; }
+  header a {
+    display: inline-block; }
+  header .icon-sanjiao {
+    position: absolute;
+    top: 0.56rem;
+    right: 2.7rem; }
+  [data-dpr="1"] header .icon-sanjiao img {
+    height: 16px; }
+  [data-dpr="2"] header .icon-sanjiao img {
+    height: 32px; }
+  [data-dpr="3"] header .icon-sanjiao img {
+    height: 48px; }
+
+.wrap {
+  width: 10rem; }
+  .wrap .week {
+    height: 0.8rem;
+    line-height: 0.8rem;
+    display: flex;
+    align-items: center; }
+
+/*# sourceMappingURL=index.css.map */
