--- a/calendar/sass/index.scss
+++ b/calendar/sass/index.scss
@@ -46,12 +46,13 @@ header{
     @include data-dpr("font-size",14);
   }
   .prev-month{
-    margin-left:size(20);
+    margin-left:size(30);
     float:left;
   }
   .next-month{
-    margin-right:size(20);
+    margin-right:size(30);
     float:right;
+    text-align: right;
   }
   .choosed-time{
     width:5rem;
@@ -65,12 +66,12 @@ header{
     @include data-dpr("font-size",16);
   }
   a{
-    display:inline-block;
+    display:inline;
   }
   .icon-sanjiao{
     position: absolute;
     top: size(42);
-    right:2.7rem;
+    right: 2.4rem;
   }
   .icon-sanjiao img{
     @include data-dpr("height",16);
@@ -87,10 +88,43 @@ header{
 }
 .wrap{
   width:10rem;
-  .week{
+  ul:first-child{
     height: size(60);
     line-height: size(60);
     display:flex;
     align-items: center;
+    li{
+      color:#666;
+      flex-grow:1;
+      text-align: center;
+      &.spe{
+        color: $main-color-weekend;
+      }
+    }
+  }
+  ul:nth-of-type(2){
+    height:8.6rem;
+    display: flex;
+    flex-wrap: wrap;
+    li{
+      text-align: center;
+      color:#333;
+      width:1.2rem;
+      height: 1.2rem;
+      line-height: 1.2rem;
+      margin: 0.11rem;
+      border-radius: 50%;
+      @include data-dpr("font-size",15);
+      &.past{
+        color: #999;
+      }
+      &.weekend{
+        color: $main-color-weekend;
+      }
+      &.active{
+        border: 1px solid $main-color-weekend;
+      }
+    }
+
   }
 }
